# Computer-Use-Agent_Collector

./: .gitignore  CMakeLists.txt  README.md  collector.py  cross_platform_capture.py  run_mac.sh  run_win.ps1  run_win.sh  run_x11.sh
V1/: collector.py  platform_backends.py
include/: action_engine.h  input_monitor.h  pipewire_capture.h  ring_buffer.h
src/: action_engine.cpp  bindings.cpp  input_monitor.cpp  input_monitor_win.cpp  pipewire_capture.cpp  ring_buffer.cpp  win32_capture.cpp
tests/: benchmark.cpp  test_stress.py
